changed header color
delete .header__nav bg color and add to header bg color

--- a/css/style.css
+++ b/css/style.css
@@ -21,11 +21,13 @@ a {
 }
 
 /* ------------- header star ------------- */
+.header{
+    background-color: #163A24;
+}
 .header__nav{
     padding: 20px 130px;
     display: flex;
     justify-content: space-between;
-    background-color: #163A24;
 }
 .header__menu{
     display: flex;
